--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top container">
         <a class="navbar-brand" href="#">Viajes Chile</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
                 <a class="nav-link" href="#">Inicio</a>
             </li>
@@ -38,8 +39,29 @@
         </div>
     </nav>
 
-    <header>
-
+    <header class="heroSection">
+        <!-- Carousel -->
+        <div id="travelsChile" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./assets/img/carousel1.jpg" alt="Patagonia">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/img/carousel2.jpg" alt="Rapanui">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/img/carousel3.jpg" alt="Isla Damas">
+                </div>
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#travelsChile" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#travelsChile" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </header>
 
     <main>
