--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top container">
-        <a class="navbar-brand" href="#">Viajes Chile</a>
+        <a class="navbar-brand" href="#"><img src="./assets/img/viajes.svg" class="svg"> Viajes Chile</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -64,9 +64,36 @@
         </a>
     </header>
 
-    <main>
+    <main class="text-light text-center bg-dark">
         <section id="about">
-
+            <h2>Quiénes Somos</h2>
+            <hr>
+            <div class="row text-left">
+                <div class="col">
+                    <div class="icon">
+                        <i class="fas fa-plane"></i>
+                    </div>
+                    <div class="aboutText">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad dolorum recusandae ducimus quae vitae nam accusamus temporibus fuga ut voluptatem!</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="aboutText">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad dolorum recusandae ducimus quae vitae nam accusamus temporibus fuga ut voluptatem!</p>
+                    </div>
+                    <div class="icon py-3">
+                        <i class="fas fa-mountain"></i>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="icon">
+                        <i class="fas fa-route"></i>
+                    </div>
+                    <div class="aboutText">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad dolorum recusandae ducimus quae vitae nam accusamus temporibus fuga ut voluptatem!</p>
+                    </div>
+                </div>
+            </div>
         </section>
         <section id="featuredSection">
 
