--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
     <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-
+    <!-- Fontawesome CDN -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <!-- My Stylesheet CSS -->
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
@@ -40,6 +41,7 @@
     </nav>
 
     <header class="heroSection">
+        
         <!-- Carousel -->
         <div id="travelsChile" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
@@ -64,33 +66,33 @@
         </a>
     </header>
 
-    <main class="text-light text-center bg-dark">
-        <section id="about">
-            <h2>Quiénes Somos</h2>
-            <hr>
+    <main class="text-light text-center bg-black container-fluid">
+        <section id="about" class="py-5">
+            <h2>¿Quiénes Somos?</h2>
+            <hr class="hrStyle">
             <div class="row text-left">
                 <div class="col">
-                    <div class="icon">
+                    <div class="icon text-center bg-info py-1">
                         <i class="fas fa-plane"></i>
                     </div>
-                    <div class="aboutText">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad dolorum recusandae ducimus quae vitae nam accusamus temporibus fuga ut voluptatem!</p>
+                    <div class="aboutText py-2">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis explicabo praesentium sapiente molestias esse, totam nam cumque nobis aliquam voluptatem, aperiam rem error atque qui in? Ad, saepe deserunt! Quasi voluptate tempore qui, magni accusantium, obcaecati laborum facilis odio atque est excepturi fugit ab, harum vitae. Earum optio sint minima consequatur, nam amet sit explicabo eos quidem vero alias quis sapiente natus soluta repudiandae eum placeat? Voluptas mollitia libero soluta accusamus quam aut itaque, laudantium dolor! Perspiciatis neque quibusdam qui adipisci excepturi? Tenetur voluptate omnis in facere quidem consequuntur vitae. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="aboutText">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad dolorum recusandae ducimus quae vitae nam accusamus temporibus fuga ut voluptatem!</p>
+                    <div class="aboutText pb-2">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis explicabo praesentium sapiente molestias esse, totam nam cumque nobis aliquam voluptatem, aperiam rem error atque qui in? Ad, saepe deserunt! Quasi voluptate tempore qui, magni accusantium, obcaecati laborum facilis odio atque est excepturi fugit ab, harum vitae. Earum optio sint minima consequatur, nam amet sit explicabo eos quidem vero alias quis sapiente natus soluta repudiandae eum placeat? Voluptas mollitia libero soluta accusamus quam aut itaque, laudantium dolor! Perspiciatis neque quibusdam qui adipisci excepturi? Tenetur voluptate omnis in facere quidem consequuntur vitae.</p>
                     </div>
-                    <div class="icon py-3">
+                    <div class="icon text-center bg-info py-1">
                         <i class="fas fa-mountain"></i>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="icon">
+                    <div class="icon text-center bg-info py-1">
                         <i class="fas fa-route"></i>
                     </div>
-                    <div class="aboutText">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad dolorum recusandae ducimus quae vitae nam accusamus temporibus fuga ut voluptatem!</p>
+                    <div class="aboutText py-2">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis explicabo praesentium sapiente molestias esse, totam nam cumque nobis aliquam voluptatem, aperiam rem error atque qui in? Ad, saepe deserunt! Quasi voluptate tempore qui, magni accusantium, obcaecati laborum facilis odio atque est excepturi fugit ab, harum vitae. Earum optio sint minima consequatur, nam amet sit explicabo eos quidem vero alias quis sapiente natus soluta repudiandae eum placeat? Voluptas mollitia libero soluta accusamus quam aut itaque, laudantium dolor! Perspiciatis neque quibusdam qui adipisci excepturi? Tenetur voluptate omnis in facere quidem consequuntur vitae. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
             </div>
@@ -109,10 +111,8 @@
 
     <!-- jquery 3.5.1 -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-
     <!-- Popper JS 1.16.1 -->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
 </body>
