add: featured section

--- a/index.html
+++ b/index.html
@@ -66,8 +66,11 @@
         </a>
     </header>
 
+    <!-- Main -->
     <main class="text-light text-center bg-black container-fluid">
-        <section id="about" class="py-5">
+        
+        <!-- Sección ¿Quienes somos? -->
+        <section id="about" class="container py-5">
             <h2>¿Quiénes Somos?</h2>
             <hr class="hrStyle">
             <div class="row text-left">
@@ -97,11 +100,52 @@
                 </div>
             </div>
         </section>
-        <section id="featuredSection">
 
+        <!-- Seccion Descatados -->
+        <section id="featuredSection" class="container py-5">
+            <h2>Destacados</h2>
+            <hr class="hrStyle">
+            <div class="row">
+                <div class="col">
+                    <div class="card">
+                        <img src="./assets/img/card1.jpg" class="card-img-top" alt="landscape1">
+                        <div class="card-body bg-info text-light text-left">
+                            <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+                            <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga aliquid totam autem sint corporis unde mollitia provident minus impedit sunt labore, accusamus debitis! Fuga nulla incidunt non impedit rerum nesciunt.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="./assets/img/card2.jpg" class="card-img-top" alt="landscape2">
+                        <div class="card-body bg-info text-light text-left">
+                            <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+                            <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga aliquid totam autem sint corporis unde mollitia provident minus impedit sunt labore, accusamus debitis! Fuga nulla incidunt non impedit rerum nesciunt.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="./assets/img/card3.jpg" class="card-img-top" alt="landscape3">
+                        <div class="card-body bg-info text-light text-left">
+                            <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+                            <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga aliquid totam autem sint corporis unde mollitia provident minus impedit sunt labore, accusamus debitis! Fuga nulla incidunt non impedit rerum nesciunt.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="./assets/img/card4.jpg" class="card-img-top" alt="landscape4">
+                        <div class="card-body bg-info text-light text-left">
+                            <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+                            <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga aliquid totam autem sint corporis unde mollitia provident minus impedit sunt labore, accusamus debitis! Fuga nulla incidunt non impedit rerum nesciunt.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <section id="contact">
-
+            
         </section>
     </main>
 
