--- a/index.html
+++ b/index.html
@@ -144,8 +144,14 @@
                 </div>
             </div>
         </section>
-        <section id="contact">
-            
+
+        <!-- Sección Contacto -->
+        <section id="contact" class="container py-5">
+            <h2>Contacto</h2>
+            <hr class="hrStyle">
+
+
+            <div class="typeform-widget" data-url="https://form.typeform.com/to/XPQKbZi0?typeform-medium=embed-snippet" style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
         </section>
     </main>
 
