--- a/index.html
+++ b/index.html
@@ -149,14 +149,22 @@
         <section id="contact" class="container py-5">
             <h2>Contacto</h2>
             <hr class="hrStyle">
-
-
             <div class="typeform-widget" data-url="https://form.typeform.com/to/XPQKbZi0?typeform-medium=embed-snippet" style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
         </section>
     </main>
 
-    <footer class="footer">
-
+    <footer class="container-fluid bg-info text-light py-1">
+        <div class="row container text-center">
+            <div class="col footerCenter">
+                <h4 class="my-0">VIAJES CHILE</h4>
+            </div>
+            <div class="col footerCenter">
+                <a href="https://github.com/r-osoriobarra"><i class="fab fa-github-square fa-2x footer-icon"></i></a>
+                <a href="www.linkedin.com"><i class="fab fa-linkedin fa-2x footer-icon px-3"></i></a>
+                <a href="www.twitter.com"><i class="fab fa-twitter-square fa-2x footer-icon pr-3"></i></a>
+                <a href="www.facebook.com"><i class="fab fa-facebook-square fa-2x footer-icon"></i></a>                            
+            </div>
+        </div>
     </footer>
 
     <!-- jquery 3.5.1 -->
