--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
     <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Lobster+Two:wght@700&display=swap" rel="stylesheet">
     <!-- Fontawesome CDN -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <!-- My Stylesheet CSS -->
@@ -17,26 +20,28 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top container">
-        <a class="navbar-brand" href="#"><img src="./assets/img/viajes.svg" class="svg"> Viajes Chile</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Inicio</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Quiénes Somos</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Destacados</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Contacto</a>
-            </li>   
-            </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-top container-fluid">
+        <div class="container">
+            <a class="navbar-brand" href="#"><img src="./assets/img/viajes.svg" class="svg"><span class="logoFont"> Viajes Chile</span></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#about">Quiénes Somos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#featuredSection">Destacados</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#contact">Contacto</a>
+                </li>   
+                </ul>
+            </div>
         </div>
     </nav>
 
@@ -155,14 +160,14 @@
 
     <footer class="container-fluid bg-info text-light py-1">
         <div class="row container text-center">
-            <div class="col footerCenter">
-                <h4 class="my-0">VIAJES CHILE</h4>
+            <div class="col footerStyle">
+                <h4 class="my-0 logoFont">Viajes Chile</h4>
             </div>
-            <div class="col footerCenter">
-                <a href="https://github.com/r-osoriobarra"><i class="fab fa-github-square fa-2x footer-icon"></i></a>
-                <a href="www.linkedin.com"><i class="fab fa-linkedin fa-2x footer-icon px-3"></i></a>
-                <a href="www.twitter.com"><i class="fab fa-twitter-square fa-2x footer-icon pr-3"></i></a>
-                <a href="www.facebook.com"><i class="fab fa-facebook-square fa-2x footer-icon"></i></a>                            
+            <div class="col footerStyle">
+                <a href="https://github.com/r-osoriobarra" target="_blank"><i class="fab fa-github-square fa-2x footer-icon"></i></a>
+                <a href="https://www.linkedin.com/in/rodrigo-osorio-barra/" target="_blank"><i class="fab fa-linkedin fa-2x footer-icon px-3"></i></a>
+                <a href="https://twitter.com/rokolive" target="_blank"><i class="fab fa-twitter-square fa-2x footer-icon pr-3"></i></a>
+                <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square fa-2x footer-icon"></i></a>                            
             </div>
         </div>
     </footer>
