--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-top container-fluid py-0">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="./assets/img/viajes.svg" class="svg"><span class="logoFont"> Viajes Chile</span></a>
+            <a class="navbar-brand" href="index.html"><img src="./assets/img/viajes.svg" class="svg"><span class="logoFont"> Viajes Chile</span></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Inicio</a>
+                    <a class="nav-link smoothScroll" href="#hero">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link smoothScroll" href="#about">Quiénes Somos</a>
@@ -45,7 +45,7 @@
         </div>
     </nav>
 
-    <header class="heroSection pt-4">
+    <header id="hero"class="heroSection pt-4">
         
         <!-- Carousel -->
         <div id="travelsChile" class="carousel slide" data-ride="carousel">
@@ -158,10 +158,10 @@
         </section>
     </main>
 
-    <footer class="container-fluid bg-info text-light py-1">
+    <footer class="container-fluid bg-info py-1">
         <div class="row container text-center">
             <div class="col footerStyle">
-                <h4 class="my-0 logoFont">Viajes Chile</h4>
+                <h4 class="my-0 logoFont text-light">Viajes Chile</h4>
             </div>
             <div class="col footerStyle">
                 <a href="https://github.com/r-osoriobarra" target="_blank" data-toggle="tooltip" data-placement="top" title="GitHub"><i class="fab fa-github-square fa-2x footer-icon"></i></a>
