add: change in div footer

--- a/index.html
+++ b/index.html
@@ -158,8 +158,9 @@
         </section>
     </main>
 
+    <!-- Footer -->
     <footer class="container-fluid bg-info py-1">
-        <div class="row container text-center">
+        <div class="row text-center">
             <div class="col footerStyle">
                 <h4 class="my-0 logoFont text-light">Viajes Chile</h4>
             </div>
