--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <a class="nav-link smoothScroll" href="#hero">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link smoothScroll" href="#about">Quiénes Somos</a>
+                    <a class="nav-link smoothScroll d-none d-md-block" href="#about">Quiénes Somos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link smoothScroll" href="#featuredSection">Destacados</a>
@@ -61,13 +61,8 @@
                 </div>
             </div>
             <a class="carousel-control-prev" href="#travelsChile" role="button" data-slide="prev">
-<<<<<<< HEAD
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
-=======
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
->>>>>>> 100c1676b9bf6106b5d913c8d147a396c045cc5b
             </a>
             <a class="carousel-control-next" href="#travelsChile" role="button" data-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
